# ai-orchestra-gateway

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_USAGE_EXAMPLES.md  CHANGELOG.md  CHANGELOG_AI-006.md  CLAUDE.md  Dockerfile  FRONTEND_TASKS_COMPLETE.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  docker-compose.yml  migration_instructions.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  test_debug.txt  test_debug_print.txt  test_debug_print_2.txt  test_error.txt  test_fake_log.txt  test_output.txt  test_probe.txt  test_probe_id.txt  test_probe_method_id.txt  test_side_effect.txt
.github/: dependabot.yml
app/: main.py
docs/: GDPR_USAGE.md  PLAN.md  PROJEKTPLAN.md  SEC-011_Quick_Reference.md  SEC-011_Trusted_Proxy_Protection.md  SEC-018_Email_Enumeration_Protection.md  SEC-019_LOGOUT_ALL_DEVICES.md  SEC-020_Quick_Reference.md  SECURITY_PLAN.md  TASKS.md
frontend/: .env.local.example  A11Y_FILES_INDEX.md  A11Y_IMPLEMENTATION_COMPLETE.md  A11Y_QUICK_REFERENCE.md  A11Y_TASKS_COMPLETE.md  ACCESSIBILITY.md  ADMIN_COMPONENTS_COMPLETE.md  ADMIN_DASHBOARD_IMPLEMENTATION.md  ADMIN_PAGES_IMPLEMENTATION_SUMMARY.md  ADMIN_PAGES_QUICK_REFERENCE.md  ADMIN_TESTING_CHECKLIST.md  AUTH_FEATURES_CHECKLIST.md  AUTH_FILES_INDEX.md  AUTH_FLOW_DIAGRAM.md  AUTH_PAGES_IMPLEMENTATION.md  AUTH_QUICK_REFERENCE.md  COMPONENT_LIBRARY_SUMMARY.md  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_PAGES_IMPLEMENTATION.md  DASHBOARD_QUICK_START.md  FEATURES.md  FILES_CREATED.txt  FRONTEND_SETUP_COMPLETE.md  I18N_A11Y_IMPLEMENTATION.md  I18N_ARCHITECTURE.md  (+37 more)
(+331 files in other folders)
